responsive for mobile screen

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
     <h1 class="heading">Get In Touch</h1>
     <div class="social">
       <div class="social_div">
-        <h2 class="heading-secondary">Social Media</h2>
-        <li><a href="#">Facebook</a></li>
+        <h2 class="heading-secondary animate">Social Media</h2>
+        <li><a class="animate" href="#">Facebook</a></li>
         <li><a href="#">Instagram</a></li>
         <li><a href="#">Whatsaap</a></li>
       </div>
